// Copyright 2018 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package tasks;

import "go.chromium.org/luci/gce/api/config/v1/config.proto";

// A task to create a GCE instance from a VM entity.
message CreateInstance {
  // The ID of the VM entity to create a GCE instance from.
  string id = 1;
}

// A task to delete a Swarming bot associated with a VM entity.
message DeleteBot {
  // The ID of the VM entity to delete a Swarming bot for.
  string id = 1;
  // The hostname of the Swarming bot to delete.
  string hostname = 2;
}

// A task to destroy a GCE instance created from a VM entity.
message DestroyInstance {
  // The ID of the VM entity to destroy a GCE instance for.
  string id = 1;
  // The URL of the GCE instance to destroy.
  string url = 2;
}

// A task to drain a particular VM entity.
message DrainVM {
  // The ID of the VM entity to drain.
  string id = 1;
}

// A task to create or update a particular VM entity.
message EnsureVM {
  // The index of the VM entity to create or update.
  int32 index = 1;
  // The attributes of the VM.
  config.VM attributes = 2;
  // The ID of the config this VM entity belongs to.
  string config = 3;
  // The lifetime of the VM in seconds.
  int64 lifetime = 4;
  // The prefix to use when naming this VM.
  string prefix = 5;
  // The hostname of the Swarming server this VM connects to.
  string swarming = 6;
}

// A task to manage a Swarming bot associated with a VM entity.
message ManageBot {
  // The ID of the VM entity to manage a Swarming bot for.
  string id = 1;
}

// A task to process a config.
message ProcessConfig {
  // The ID of the config to process.
  string id = 1;
}

// A task to report GCE quota utilization.
message ReportQuota {
  // The ID of the project entity to report quota utilization for.
  string id = 1;
}

// A task to terminate a Swarming bot associated with a VM entity.
message TerminateBot {
  // The ID of the VM entity to terminate a Swarming bot for.
  string id = 1;
  // The hostname of the Swarming bot to terminate.
  string hostname = 2;
}
